# ldml-keyboards

./: .gitignore  CMakeLists.txt  Readme.MD
docs/: ldmlman.capnp  ldmlman.capnp.c++  ldmlman.capnp.h  ldmlman.txt
src/: ldml-keyboards.cpp
